package rec.gui;

message ButtonProto {
  enum Style {
    ImageFitted = 0;
    ImageRaw = 1;
    ImageAboveTextLabel = 2;
    ImageOnButtonBackground = 3;
    ImageStretched = 4;
  };

  message State {
    optional bool normal = 1 [default = true];
    optional bool over = 2 [default = false];
    optional bool down = 3 [default = true];
    optional bool disabled = 4 [default = true];
  };

  optional Style style = 1;
  optional State state = 2;
  optional State state_on = 3;
};

